tests/error/noMain.tpc
int plop(void){
	return 1;
}